<resources>
    <string name="app_name">Engineering Reviewer</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="settings_menu_text">Settings</string>
    <string name="help_menu_text">Help</string>
    <string name="about_menu_text">About</string>
    <string name="engg_icon_description">A Book, Atom, and Gear</string>
    <string name="title_activity_topic_list">Select Topic</string>
    <string name="action_settings">Settings</string>
    <string name="view_lecture">View Lecture</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="quit">Quit</string>
    <string name="engineering_reviewer">Engineering Reviewer</string>
    <string name="score">Score</string>
    <string name="_0">0</string>
    <string name="placeholder_text">placeholder_text</string>
    <string name="next">Next</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Main menu titles -->
    <string-array name="main_menu_titles">
        <item>Review Lectures</item>
        <item>Take a Quiz</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>

    <!-- Main menu description -->
    <string-array name="main_menu_description">
        <item>Engineering Theory and Topics that will give you all necessary knowledge.</item>
        <item>Test your self. Apply everything you learned with this simple quiz.</item>
        <item>Your Preferences.</item>
        <item>About the developer.</item>
    </string-array>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="setting_option_title">Settings option</string>
    <string name="setting_option_summary">Turn this option on or off</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
