<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    tools:context="com.philcst.www.engineeringreviewer.MainActivity"
    tools:showIn="@layout/activity_main">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/engglogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/ic_engg_rev_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="@string/engineering_reviewer"
        android:textAppearance="?android:textAppearanceLarge"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btn_view_lecture"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="4dp"
        android:text="@string/view_lecture" />

    <Button
        android:id="@+id/btn_start_quiz"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="4dp"
        android:text="@string/start_quiz" />

    <Button
        android:id="@+id/btn_quit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="125dp"
        android:text="@string/quit"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold" />

</LinearLayout>