<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingEnd="8dp"
    android:paddingStart="8dp"
    tools:context="com.philcst.www.engineeringreviewer.QuizActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/score"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/score_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/_0"
            android:textSize="20sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/question_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/placeholder_text"
        android:textSize="20sp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="3dp"
        android:padding="4dp"
        app:cardCornerRadius="3dp">

        <com.philcst.www.engineeringreviewer.view.MathView
            android:id="@+id/question_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choice_card_view_a"
        app:cardElevation="3dp"
        android:padding="4dp"
        android:layout_margin="4dp"
        app:cardCornerRadius="3dp">

        <com.philcst.www.engineeringreviewer.view.MathView
            android:id="@+id/choice_math_view_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:setClickable="true"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choice_card_view_b"
        app:cardElevation="3dp"
        android:padding="4dp"
        android:layout_margin="4dp"
        app:cardCornerRadius="3dp">

        <com.philcst.www.engineeringreviewer.view.MathView
            android:id="@+id/choice_math_view_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:setClickable="true"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choice_card_view_c"
        app:cardElevation="3dp"
        android:padding="4dp"
        android:layout_margin="4dp"
        app:cardCornerRadius="3dp">

        <com.philcst.www.engineeringreviewer.view.MathView
            android:id="@+id/choice_math_view_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:setClickable="true"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choice_card_view_d"
        app:cardElevation="3dp"
        android:padding="4dp"
        android:layout_margin="4dp"
        app:cardCornerRadius="3dp">

        <com.philcst.www.engineeringreviewer.view.MathView
            android:id="@+id/choice_math_view_d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:setClickable="true"/>

    </android.support.v7.widget.CardView>

    <!--<Button
        android:id="@+id/next_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:padding="8dp"
        android:text="@string/next" />-->

</LinearLayout>
